tests/NormalTests/paczka1/fuzzy1/15878901.err
Error in line 3: kov3uOvWt4H A582 79,3
Error in line 18: S76 S76 35,3
Error in line 23: kov3uOvWt4H S76 2,9
Error in line 15: PbphW35 A582 32,3
Error in line 26: Rj5PClFr A73 55,7
Error in line 25: PbphW35 A306 39,2
Error in line 24: kov3uOvWt4H A582 72,5
Error in line 35: S76 A582 67,0
